# Snake-SDCC

./: CMakeLists.txt  TC_8051.cmake
include/: stc89c52.h
src/: CMakeLists.txt  Delay.c  Delay.h  main.c
